<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/char_bg"
            android:layout_width="wrap_content"
            android:layout_height="309dp"
            android:src="@drawable/dilucbg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/char_pic"
            android:layout_width="106dp"
            android:layout_height="106dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/albedo"
            app:layout_constraintBottom_toBottomOf="@+id/char_name"
            app:layout_constraintStart_toStartOf="@+id/char_bg" />

        <TextView
            android:id="@+id/char_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/char_pic"
            app:layout_constraintTop_toBottomOf="@+id/char_bg"
            tools:text="Albedo" />

        <ImageView
            android:id="@+id/fav_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_favorite_border_24"
            app:layout_constraintBottom_toBottomOf="@+id/char_name"
            app:layout_constraintStart_toEndOf="@+id/char_name"
            app:layout_constraintTop_toTopOf="@+id/char_name" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/char_bio"
            app:layout_constraintStart_toStartOf="@+id/char_bio"
            app:layout_constraintTop_toBottomOf="@+id/char_bio" />

        <ImageView
            android:id="@+id/char_element"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/anemo"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/char_name"
            app:layout_constraintTop_toTopOf="@+id/char_vision" />

        <TextView
            android:id="@+id/char_vision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/dummyvision"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/char_name" />

        <TextView
            android:id="@+id/char_affiliation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummyaffil"
            app:layout_constraintStart_toStartOf="@+id/char_vision"
            app:layout_constraintTop_toBottomOf="@+id/char_vision" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/birthday"
            app:layout_constraintStart_toStartOf="@+id/char_affiliation"
            app:layout_constraintTop_toBottomOf="@+id/char_affiliation" />

        <TextView
            android:id="@+id/char_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummybirth"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/weapon"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/char_weapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummyweapon"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/intro"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/char_bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummyintro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>